--- a/responsive.html
+++ b/responsive.html
@@ -3,46 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="responsive.css">
     <title>Responsive</title>
 </head>
-<style>
-    *{
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-    html, body{
-        width: 100VW;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    table{
-        width: 100%;
-        height: 100%;
-    }
-    .responsive-table{
-        display: flex;
-        width: 100vw;
-        height: 100vh;
-    }
-    .cell01{
-        flex: 1;
-        text-align: center;
-        border: 1 double green;
-        font-size: 2vw;
-        background-color: blueviolet;
-    }
-    .cell02{
-        flex: 1;
-        text-align: center;
-        border: 1 double green;
-        font-size: 2vw;
-        background-color: rgb(16, 44, 207);
-    }
 
-</style>
 <body>
     <table> 
         <tr class="responvise-table">
